# speedierwatch

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  main.py  manage.py  pyproject.toml
analytics/: urls.py  views.py
speedierwatch/: asgi.py  settings.py  urls.py  wsgi.py
speedwatcher/: asgi.py  settings.py  urls.py  wsgi.py
study/: admin.py  forms.py  models.py  urls.py  views.py
study/data/: questions.json
study/management/commands/: add_quiz_questions.py
study/migrations/: 0001_initial.py  0002_delete_question.py  0003_quizresponse_raffle_tickets.py  0004_add_referral_fields.py  0005_update_raffle_tickets.py  0006_change_tickets_to_decimal.py
study/migrations/operations/: update_raffle_tickets.py
templates/: base.html
templates/analytics/: statistics.html
templates/study/: home.html  invalidated.html  leaderboard.html  notifications.html  quiz.html  referral_info.html  results.html  video.html
