[project]
name = "speedierwatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-bootstrap5==2024.2",
    "django==5.0.2",
    "django-crispy-forms==2.1",
    "gunicorn>=23.0.0",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.0",
]
